1.02:

        * Declare dependency on XML::Simple

1.01:

        * Make the verified_identity bit accept assertions from any
          declared endpoint, rather than only the primary one.
          This implementation kinda sucks because it hits the identity
          URL over and over doing discovery.

        * Refactor the discovery code a little so that the whole list
          of valid endpoints can optionally be returned. This is in
          preparation for fixing the assertion verification code
          so that providers other than the primary one are able to
          make assertions.

        * Support indirect messages encapsualated in POST requests
          when args are given as a CGI, Apache, or Apache::Request
          object.

        * Support the 1.1 and 1.0 namespace values required by
          Auth 2.0 section 4.1.2.

        * Deal with cases where Net::OpenID::Yadis returns arrayref
          or hashref for Service->URI, including a basic support for
          the priority attribute. Based on a patch from
          Fumiaki Yoshimatsu <fyoshimatsu@sixapart.com>.

        * when dealing with a 2.0 server, send 2.0-shaped association
          requests.

        * add the set_extension_args method to ClaimedIdentity and the
          extension_fields and signed_extension_fields methods to
          VerifiedIdentity, which together form a higher-level API
          for using protocol extensions such as SREG and PAPE.

        * add support for OpenID 2.0-style messages from providers

        * use our own simplified fork of Net::Yadis::Discovery to avoid
          dependency on Module::Pluggable::Fast. Or on Net::Yadis::Discovery,
          for that matter.

        * add hooks for openid-test project. (bradfitz)

        * add OpenID 2.0-compliant discovery and authentication request.

        * add method on claimed identity object to get delgated URL

0.14: (2007-08-03)

        * allow CGI subclasses (like CGI::Fast) for args.  bug fix