@@ -1,0 +1,9 @@
+#!/usr/bin/perl
+
+use strict;
+use Test::More tests => 1;
+use Net::OpenID::IndirectMessage;
+
+ok(1);
+
+1;
