@@ -1,0 +1,1 @@
+        * Initial version with stuff moved out of Net::OpenID::Consumer.
